@@ -4,6 +4,9 @@ v. 0.0.8 -
   2) Изменён способ показа сообщения "Устройства не найдены".
   3) Изменение полей "Скрытые устройства" и "Показывать всегда" больше
      не требует перезапуска программы.
+  4) Скрипты lock-crypsetup-* пытаются отмотировать ФС контейнера, если
+     необходимо.  Скрипты unlock-cryptsetup-* вызывают команду
+     монтирования, если в контейнере найдена ФС.
 
 v. 0.0.7 - 2018.06.13
   1) Добавлена возможность "Скрыть иконку/Показать в лотке".
